--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "antd": "^5.15.2",
+    "axios": "^1.6.7",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.0"
+    "react-hook-form": "^7.51.0",
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "@types/node": "^20",
