--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@testing-library/react": "^14.2.1",
     "antd": "^5.15.2",
     "next": "14.1.3",
     "react": "^18",
@@ -17,6 +18,7 @@
     "sass": "^1.71.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
