--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@testing-library/react": "^14.2.1",
     "antd": "^5.15.2",
+    "jest": "^29.7.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -24,6 +26,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
   }
 }
