--- a/package.json
+++ b/package.json
@@ -9,8 +9,18 @@
     "lint": "next lint",
     "test": "jest"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "jsdom",
+    "transformIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest",
+      "^.+\\.scss$": "jest-transform-css"
+    }
+  },
   "dependencies": {
-    "@testing-library/react": "^14.2.1",
     "antd": "^5.15.2",
     "jest": "^29.7.0",
     "next": "14.1.3",
@@ -20,12 +30,18 @@
     "sass": "^1.71.1"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-css": "^6.0.1",
+    "jest-transform-stub": "^2.0.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
   }
